# understanding-design-ib

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
saved/: fig_01_shallowrelu_d27ae7cf.safetensors  fig_02_matcomp_a44b7844.safetensors  fig_03_attention_993cc420.safetensors  fig_04_spectralsparse_41cb58c7.safetensors  fig_05_tv_cefd8e10.safetensors
src/: 00_redo_plots.py  01_shallowrelu.py  01_suppl_rank_matcomp.py  02_attention.py  03_spectral_sparse.py  04_tv_regularization.py  data.py  models.py  nmi.mplstyle  nmi.py  optim.py  plotting.py  seeder.py  stats.py  training.py  utils.py
