[project]
name = "understanding-design-ib-env"
version = "0.1.0"
description = "uv environment to reproduce results from 'Understanding and inverse design of implicit bias in stochastic learning: a symmetry perspective' (Aladrah et al., 2026)"
requires-python = ">=3.14"
dependencies = [
    "filelock>=3.20.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pillow>=12.1.1",
    "safetensors>=0.5.3",
    "simple-parsing>=0.1.8",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
