[project]
    authors = [{ name = "Emanuele Ballarin" }]
    dependencies = [
        "matplotlib>=3.10.9",
        "numpy>=2.4.4",
        "safetensors>=0.7",
        "simple-parsing>=0.1.8",
        "torch>=2.11",
        "tqdm>=4.67.3",
    ]
    description = "uv environment to reproduce results from 'Understanding and inverse design of implicit bias in stochastic learning: a symmetry perspective' (Aladrah et al., 2026)"
    license = { text = "MIT" }
    name = "understanding-design-ib-env"
    readme = "README.md"
    requires-python = ">=3.14.4"
    version = "0.1.1"


[tool.uv]
    package = false
